--- a/CRM/todo
+++ b/CRM/todo
@@ -1,17 +1,13 @@
-#todo
-首页 1 登陆  2. 背景
+#todo 首页 1 登陆  2. 背景
+# todo 客户管理
+#todo 1. 基本信息 1）编号 2）客户性质（潜在 正式） 3）类型 （学生 家长 成人） 4）姓名 5）年龄 6）从哪里知道我们 7）联系方式
 
-客户管理
-1. 基本信息 1）编号 2）客户性质（潜在 正式） 3）类型 （学生 家长 成人） 4）姓名 5）年龄 6）从哪里知道我们 7）联系方式
-
-2. 咨询主题 （什么意思？）
-
-3. 咨询记录 1）来访次数 2）来访记录 3）咨询报告  (来访记录是具体指什么，和报告的区别是什么，分别做什么功能？）
-
-4. 回访记录 1）回访记录 2） 回访次数
-
-5. 智慧父母 1）工作坊 主题 期数 报名者  2）公益沙龙  主题 期数 报名者
-
-6. 特色训练班 1)各种班课  期数 人数 报名登记
-
-7. 关于 1）简介 2）微信公众号 3）  联系我们
+#todo 2. 询主题 （什么意思？)突然想起来，心理咨询的预约，就睡不着了。客户管理中第二条咨询主题，换成预约登记，
+#todo 包括，客户编号，姓名，预约主题，预约时间档，预约登记表，预约确认。预约时间档中有下拉日历选择哪一天，
+#todo 然后选择那一天的时间档。时间档主要为周二周三周四周五下午三点到四点，周日上午十点到十一点，下午三点到四点。
+#todo 2. 周一和周六不咨询。预约登记表是一个上传文档。预约确认包括是与否，如果确认是，即为到访，跳转为来访记录。如果确认否否，备注原因。
+#todo 3. 咨询记录 1）来访次数 2）来访记录 3）咨询报告  (来访记录是具体指什么，和报告的区别是什么，分别做什么功能？）
+#todo 4. 回访记录 1）回访记录 2） 回访次数
+#todo 5. 智慧父母 1）工作坊 主题 期数 报名者  2）公益沙龙  主题 期数 报名者
+#todo 6. 特色训练班 1)各种班课  期数 人数 报名登记
+#todo 7. 关于 1）简介 2）微信公众号 3）  联系我们
